# minishell

./: .gitignore  .gitmodules  Makefile  README.md  TODO.conf  TODO_l.txt  algorithm.txt  glob.sh  in.txt  meson.build  myalg  norm_fix.sh  result.txt  valgrind_suppressions.txt
include/: builtins.h  config.h  environment.h  exec_find.h  expansions.h  global_code.h  lexer.h  logic_tokenizer.h  minishell.h  parser.h  reader.h  signals.h
src/: global_code.c  minishell.c  norm_fix.sh
src/builtins/: builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_unset.c  echo.c  pwd.c
src/environment/: environment.c  environment_utils.c  environment_utils2.c
src/exec_finder/: exec_finder.c  exec_finder_utils.c  exec_finder_utils2.c  exec_launcher.c
src/expansions/: star_expand.c  star_expand_file_utils.c  var_expand.c
src/lexer/: lexer.c  quotes_and_parens.c  star_expand.c  star_expand_file_utils.c  star_expand_match_utils.c  star_expander.c  star_expander_utils.c  star_expander_utils2.c  token.c  token2.c  token3.c  token_composer.c  token_string_utils.c  tokenize.c  tokenizer.c  var_expand.c
src/logic_tokenizer/: logic_tokenizer.c  logic_tokenizer_utils.c  logic_tokenizer_utils2.c
src/parser/: arg_tokenizer.c  command_executer.c  expander.c  logic_error_parser.c  logic_executer.c  pipeline_error_parser.c  pipeline_executer.c  pipeline_lexer.c  pipeline_lexer_next_token.c
src/reader/: heredoc_utils.c  heredoc_utils2.c  read_heredoc.c  reader.c
src/signal/: signal.c
src/signals/: signals.c  signals2.c  signals_child.c
subprojects/Unity-2.5.2/: .meson-subproject-wrap-hash.txt
test/: arg_tokenizer_test.c  echo_test.c  environment_test.c  example_test.c  find_exec_test.c  lexer_test.c  lexer_tester.c  logic_error_parser_test.c  logic_exec_test.c  logic_tok_test.c  minishell.c  pipeline_lexer_test.c  read_heredoc_test.c  redirection_test.c  res.txt  results_3.txt  sig_test.c  star_expander_test.c  test.c  test_later.txt  test_results.txt  test_results_2.txt  test_star_expander.c  test_tokenizer_2.c  test_tokenizer_2.c_  tester.sh  var_expander_test.c
test/suites/: ALL_TESTS.txt  at_2.txt  suite_1.txt  suite_10.txt  suite_11.txt  suite_12.txt  suite_2.txt  suite_3.txt  suite_4.txt  suite_5_emoji.txt  suite_6.txt  suite_7.txt  suite_8.txt
